--- a/KINOv2/KINOv2/Views/Home/Affiche.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Affiche.cshtml
@@ -7,83 +7,31 @@
 <h2>@ViewData["Message"]</h2>
 
 <div>
-
     @if (User.IsInRole("Admin"))
     {
         <div class="row">
-            @*<p><a class="btn btn-default col-md-2 col-md-offset-10" href="/Manage/FilmManage">Добавить фильм</a></p>*@
-            <a asp-area="" asp-controller="Content" asp-action="FilmManage" class="btn btn-default">Добавить фильм</a>
+            <a asp-area="" asp-controller="Content" asp-action="FilmManage" class="btn">Добавить фильм</a>
         </div>
-
     }
 
-        <div class="row justify-content-sm-center justify-content-md-start">
-            @foreach (Film film in ViewData["Films"] as IEnumerable<Film>)
-    {
-        <div class="col-9 col-sm-5 col-md-3 col-lg-4 col-xl-3 mb-3 mx-auto mx-sm-0 mt-2 mt-md-0">
-            @{
-                @*<div class="poster-image" style="background-image: url('@Url.Content("~/images/Posters/" + film.Poster)')"></div>
-            <div class="film-info col-md-6">
-                <h3><a asp-area="" asp-controller="Home" asp-action="Film" asp-route-id="@film.LINK">@(film.Name + $"({film.ReleaseYear})")</a></h3>
-                <strong>Жанр: </strong><span>@film.Genre.Name</span><br />
-                <strong>Ограничение: </strong><span>@film.AgeLimit.Value</span><br />
-            </div>*@
-                <div>
-                    <a class="text-orange affiche-film" asp-area="" asp-controller="Home" asp-action="Film" asp-route-id="@film.LINK">
-                        <div class="image-container" ><img class="img-fluid"  src="@Url.Content("~/images/Posters/" + film.Poster)" /></div>
-                        <div class="h3 text-center text-orange">
-                            @(film.Name)
-                        </div>
-                    </a>
-                </div>
-            }
-        </div>
-        <div class="col-9 col-sm-5 col-md-3 col-lg-4 col-xl-3 mb-3 mx-auto mx-sm-0 mt-2 mt-md-0">
-            @{
-                @*<div class="poster-image" style="background-image: url('@Url.Content("~/images/Posters/" + film.Poster)')"></div>
-            <div class="film-info col-md-6">
-                <h3><a asp-area="" asp-controller="Home" asp-action="Film" asp-route-id="@film.LINK">@(film.Name + $"({film.ReleaseYear})")</a></h3>
-                <strong>Жанр: </strong><span>@film.Genre.Name</span><br />
-                <strong>Ограничение: </strong><span>@film.AgeLimit.Value</span><br />
-            </div>*@
-                <div>
-                    <a class="text-orange" asp-area="" asp-controller="Home" asp-action="Film" asp-route-id="@film.LINK">
-                        <div class="image-container"><img class="img-fluid" src="@Url.Content("~/images/Posters/" + film.Poster)" /></div>
-                        <div class=" h3 text-center text-orange">
-                            @(film.Name)
-                        </div>
-                    </a>
-                </div>
-            }
-        </div>
-        <div class="col-9 col-sm-5 col-md-3 col-lg-4 col-xl-3 mb-3 mx-auto mx-sm-0 mt-2 mt-md-0">
-            @{
-                @*<div class="poster-image" style="background-image: url('@Url.Content("~/images/Posters/" + film.Poster)')"></div>
-            <div class="film-info col-md-6">
-                <h3><a asp-area="" asp-controller="Home" asp-action="Film" asp-route-id="@film.LINK">@(film.Name + $"({film.ReleaseYear})")</a></h3>
-                <strong>Жанр: </strong><span>@film.Genre.Name</span><br />
-                <strong>Ограничение: </strong><span>@film.AgeLimit.Value</span><br />
-            </div>*@
-                <div>
-                    <a class="text-orange" asp-area="" asp-controller="Home" asp-action="Film" asp-route-id="@film.LINK">
-                        <div class="image-container"><img class="img-fluid" src="@Url.Content("~/images/Posters/" + film.Poster)" /></div>
-                        <div class=" h3 text-center text-orange">
-                            @(film.Name)
-                        </div>
-                    </a>
-                </div>
-            }
-        </div>
-}
-        </div>
+    <div class="row justify-content-sm-center justify-content-md-start">
+        @foreach (Film film in ViewData["Films"] as IEnumerable<Film>)
+        {
+            <div class="col-9 col-sm-5 col-md-3 col-lg-4 col-xl-3 mb-3 mx-auto mx-sm-0 mt-2 mt-md-0">
+                @{
+                    <div>
+                        <a class="text-orange affiche-film" asp-area="" asp-controller="Home" asp-action="Film" asp-route-id="@film.LINK">
+                            <div class="image-container"><img class="img-fluid" src="@Url.Content("~/images/Posters/" + film.Poster)" /></div>
+                            <div class="h3 text-center text-orange">
+                                @(film.Name)
+                            </div>
+                        </a>
+                    </div>
+                }
+            </div>
+        }
+    </div>
 
-    @*<form asp-controller="" asp-action=""
-              data-ajax-begin="onBegin" data-ajax-complete="onComplete"
-              data-ajax-failure="onFailed" data-ajax-success="onSuccess"
-              data-ajax="true" data-ajax-method="POST">
-            <input type="submit" value="Save" class="btn btn-primary" />
-            <div id="Results"></div>
-        </form>*@
     <nav>
         <page-link page-model=@(ViewData["PageView"] as PageViewModel) page-action="Affiche"></page-link>
     </nav>
