--- a/KINOv2/KINOv2/Views/Home/Film.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Film.cshtml
@@ -1,6 +1,4 @@
-﻿@using System.Globalization
-
-@{
+﻿@{
     var film = (ViewData["Film"] as Film);
     bool favorite = (Convert.ToBoolean(ViewData["Favorite"]));
     bool filmRated = (Convert.ToBoolean(ViewData["FilmRated"]));
@@ -9,9 +7,6 @@
 <div class="film-container">
     <div class="row mx-auto" style="max-width: 1000px;">
         <div class="col-12 col-sm-5 col-md-5 " style=" ">
-            @*<div class="poster-image-large img-responsive" style="background-image:url('@Url.Content("~/images/Posters/" + film.Poster)'); margin-top:25px;">
-
-                </div>*@
             <img class="img-fluid" src="@Url.Content("~/images/Posters/" + film.Poster)" />
 
             <div class="row mx-auto my-auto">
@@ -31,8 +26,6 @@
                 }
 
             </h1>
-
-
             <div style="margin-bottom:5px;" class="row">
                 <label class="text-info col" asp-for="@film.ReleaseYear"></label>
                 <span class="col">@film.ReleaseYear</span>
@@ -56,45 +49,22 @@
             <div style="margin-bottom:5px;" class="row">
                 <label class="text-info col-6" asp-for="@film.AgeLimitLINK"></label>
                 <span class="age-label offset-1">@film.AgeLimit.Value</span>
-
-                @*<div class="col-5 col-md-4">
-                        <label style="display:block" class="text-info" asp-for="@film.ReleaseYear"></label>
-                        <label style="display:block" class="text-info" asp-for="@film.Duration"></label>
-                        <label style="display:block" class="text-info" asp-for="@film.CountryLINK"></label>
-                        <label style="display:block" class="text-info" asp-for="@film.GenreLINK"></label>
-                        <label style="display:block" class="text-info" asp-for="@film.DirectorLINK"></label>
-                        <label style="display:block" class="text-info" asp-for="@film.AgeLimitLINK"></label>
-                    </div>
-                    <div class="col-6 col-md-6">
-                        <span style="display:block; margin-bottom:.5rem;">@film.ReleaseYear</span>
-                        <span style="display:block; margin-bottom:.5rem;">@film.Duration</span>
-                        <span style="display:block; margin-bottom:.5rem;">@film.Country.Name</span>
-                        <span style="display:block; margin-bottom:.5rem;">@film.Genre.Name</span>
-                        <span style="display:block; margin-bottom:.5rem;">@film.Director.Name @film.Director.Surname</span>
-                        <span class="age-label"  style="display:block">@film.AgeLimit.Value</span>
-                    </div>*@
             </div>
             <h3>О фильме</h3>
             <p style="word-break:break-word; max-width:500px; font-family:Helvetica Neue, Helvetica, Arial, sans-serif;">
                 @film.Description
             </p>
         </div>
-        @*<a href="#" id="favorite" class="btn"><i class="fa fa-bookmark"></i></a>*@
-
     </div>
-
-
-
 
     @if (User.IsInRole("Admin"))
     {
         <hr />
         <div class="row">
-            @*<p><a class="btn btn-default col-md-2" style="margin-left:10px;" href="/Manage/SessionManage?film=@ViewBag.Film.LINK">Добавить сеанс</a></p>*@
             <a asp-area="" asp-controller="Content" asp-action="SessionManage" asp-route-film="@film.LINK">Добавить сеанс</a>
         </div>
-
     }
+
     <h2>Сеансы</h2>
     <hr />
     <div class="d-md-flex flex-md-row">
@@ -146,112 +116,26 @@
     <div id="comments" class="mt-2">
         @await Html.PartialAsync("Comments")
     </div>
-    @*<h2>Комментарии <b class="text-primary" style="color:#f6a21c">15</b></h2>
-        <hr />
 
-        @*<div style=" margin:auto; width:50%" class="row">
-                <div style="display:block; border: 2px solid #fff; padding:5px;">
-                    <div style="position:relative; float:left;"  class="col-md-3">
-                        <img style="position:relative" width="140" height="140" src="~/images/Profiles/default.png" />
-                        <p style="margin-top:10px; text-align:center;">@User.Identity.Name</p>
-                    </div>
-                    <div style=" float:left;" class="col-md-6">
-                        <p style="width:50%">123</p>
-                    </div>
-                </div>
-            </div>
-
-        <div class="row comment" style="max-width:700px; border-top: 2px solid #f6a21c; margin-right:auto; margin-left:auto; margin-bottom:20px; padding-bottom:15px;">
-
-            <div>
-                <div style="margin-bottom:5px;">
-                    @*<h4 style="color:#f6a21c; display:inline-block; margin:5px 10px;">1</h4>*@
-    @*<span style="margin-left:25px;">@User.Identity.Name</span>
-                    <span style="display:inline-block; min-width:120px; text-align:center; margin-left:15px;">@User.Identity.Name</span>
-                    <span style="margin-left:10px;">@DateTime.Now</span>
-                    <div style="display:inline; float:right; margin-right:10px;" data-comment-id="1">
-                        <a class="comment-rate like" href="#" style="margin:auto 5px;"><i style="font-size:25px; color:#3B708F" class="fa fa-caret-up"></i></a>
-                        <span>-1</span>
-                        <a class="comment-rate dislike" href="#" style="margin:auto 5px;"><i style="font-size:25px; color:#3B708F" class="fa fa-caret-down"></i></a>
-                    </div>
-                </div>
-            </div>
-            <center>
-                <div style="float:left; margin-left:15px;" class="col-lg-2">
-                    <img class="img-responsive img-thumbnail" width="100" src="~/images/Profiles/default.png" />
-                </div>
-            </center>
-            <div style="float:left;" class="col-md-9">
-                <p style="font-family: Calibri,Verdana,Helvetica,sans-serif;" class="">Здесь был Ваня</p>
-            </div>
-
-        </div>
-        <div class="row" style="max-width:700px; border-top: 2px solid #f6a21c; margin-right:auto; margin-left:auto; margin-bottom:20px; ">
-
-            <div>
-                <div style="margin-bottom:5px;">
-                    @*<h4 style="color:#f6a21c; display:inline-block; margin:5px 10px;">1</h4>*@
-    @*<span style="margin-left:25px;">@User.Identity.Name</span>
-                    <span style="display:inline-block; min-width:120px; text-align:center; margin-left:15px;">@User.Identity.Name</span>
-                    <span style="margin-left:10px;">@DateTime.Now</span>
-                    <div style="display:inline; float:right; margin-right:10px;">
-                        <a href="#" style="margin:auto 5px;"><i style="font-size:25px; color:#3B708F" class="fa fa-caret-up"></i></a>
-                        <span>0</span>
-                        <a href="#" style="margin:auto 5px;"><i style="font-size:25px; color:#3B708F" class="fa fa-caret-down"></i></a>
-                    </div>
-                </div>
-            </div>
-            <center>
-                <div style="float:left; margin-left:15px;" class="col-lg-2">
-                    <img class="img-responsive img-thumbnail" width="100" src="~/images/Profiles/default.png" />
-                </div>
-            </center>
-            <div style="float:left;" class="col-md-9">
-                <p style="font-family: Calibri,Verdana,Helvetica,sans-serif;" class="">Здесь был Ваня</p>
-            </div>
-
-        </div>*@
     @if (User.Identity.IsAuthenticated)
     {
         <h3>Написать сообщение</h3>
         <div class="row border rounded no-gutters mx-auto" style="max-width:700px;">
 
-            @*<div style=" display:flow-root; margin-bottom:20px; box-shadow:inset 0 0 10px #000000; background-color:#ffffff; padding:10px;">*@
             <form class="w-100 col-12" asp-area="" asp-controller="Home" asp-action="SendMessage" asp-route-id="@film.LINK" enctype="multipart/form-data" data-ajax="true" data-ajax-method="POST" data-ajax-update="#comments" data-ajax-mode="replace">
-                @*<div style="text-align:center;">
-                        <div style="display:inline-block; border: 2px solid #fff; padding:5px;">
-                            <div style="position:relative; float:left; margin-right:5px;">
-                                <img width="140" height="140" src="~/images/Profiles/default.png" />
-
-                            </div>
-                            <div style="width:500px; margin:auto; float:left; text-align:left;">
-                                <textarea id="message" name="example" placeholder="Напишите ответ..." style="text-align:left" maxlength="5"></textarea>
-                            </div>
-                        </div>
-
-                    </div>
-                    <center>
-                        <button class="btn btn-info" type="submit" style=" background-color:#f6a21c; border-color:#f6a21c">Отправить</button>
-                    </center>*@
                 <input id="reply-comment" type="hidden" name="replyid" value="-1" />
-
                 <div class="">
-                    @*<div class="col-5 mt-3" style="position:absolute; z-index:100;">
-                            <img class="img-fluid img-thumbnail" width="150" src="~/images/Profiles/default.png" />
-                            <p style="color:#3B708F; text-align:center;">@User.Identity.Name</p>
-                        </div>*@
                     <textarea id="message" name="msg" placeholder="Напишите ответ..." style="text-align:left"></textarea>
                     <button id="msg-sender" class="btn btn-info" type="submit" style=" z-index:1; position:absolute; bottom:0px; left:55%; background-color:#f6a21c; border-color:#f6a21c; ">Отправить</button>
                 </div>
-
             </form>
-            @*</div>*@
+
         </div>
     }
     else
     {
-        <div class="row mx-auto">
-            <div class="text-center">
+        <div class="row">
+            <div class="text-center mx-auto">
                 <span> Только авторизованные пользователи могут оставлять комментарии.</span><a asp-area="" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@(Url.RouteUrl(new { controller = "Home", action = "Film", id = film.LINK }))"> Войдите, пожалуйста.</a>
             </div>
         </div>
