--- a/KINOv2/KINOv2/Views/Manage/Index.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/Index.cshtml
@@ -14,7 +14,7 @@
 <h1>Профиль</h1>
 
 <div class="d-md-flex flex-md-row">
-    <ul class="nav nav-tabs d-md-inline-flex align-self-md-start flex-md-column col-lg-2" id="myTab" role="tablist">
+    <ul class="nav nav-tabs d-md-inline-flex align-self-md-start flex-md-column col-md-2 col-lg-2" id="myTab" role="tablist">
         <li class="nav-item w-100" style="max-width:90px;">
             <a class="nav-link text-center px-0 px-md-3 active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-expanded="true">Профиль</a>
         </li>
@@ -45,7 +45,7 @@
                 <div class="col-12 col-sm-5 col-md-6 col-lg-4">
                     <img class="img-fluid img-thumbnail w-75 d-block mx-auto" src="@imgPath" />
                 </div>
-                <div class="col-12 col-sm-7 col-md-6">
+                <div class="col-12 col-sm-7 col-md-6 col-lg-6">
                     <div class="text-center mb-1">
                         <span class="h4 text-orange">@Model.Username</span>
                     </div>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <h2 class="col-12">Избранные фильмы</h2>
-                <div class="col-12">
+                <div class="col-12 col-lg-10">
                     <table class="table table-sm table-striped">
                         <thead>
                             <tr>
@@ -93,7 +93,7 @@
         </div>
         <div class="tab-pane fade" id="history" role="tabpanel" aria-labelledby="history-tab">
             <h2>История заказов</h2>
-            <table id="history-table" class="table table-hover bg-dark-blue">
+            <table id="history-table" class="table table-hover bg-dark-blue col-lg-9">
                 <thead>
                     <tr>
                         <th data-breakpoints="xs sm">Зал</th>
@@ -122,56 +122,61 @@
         <div class="tab-pane fade" id="settings" role="tabpanel" aria-labelledby="settings-tab">
             <div class="row">
                 <h2 class="col-12">Настройка профиля</h2>
-                <div class="col-12 col-sm-6 mx-sm-auto col-lg-4"><img id="profile-image" class="img-fluid img-thumbnail w-75 d-block mx-auto" style="max-height:250px;" src="@imgPath" /></div>
-                <form class="col-12 col-sm-8 mx-sm-auto col-lg-6" asp-action="ChangeProfileSettings" asp-controller="Manage" method="post">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-group text-center">
-                        <input class="text-center" asp-for="ProfileUploaded" type="file" name="ProfileUploaded" onchange="ChangeImage(this.files);" />
-                    </div>
-                    <div class="form-group">
-                        <label class="text-info" asp-for="Email"></label>
-                        <input asp-for="Email" class="form-control control" style="color:#000000" />
-                    </div>
-                    <div class="form-group">
-                        <label class="text-info" asp-for="PhoneNumber"></label>
-                        <input asp-for="PhoneNumber" class="form-control control" />
-                    </div>
-                    <div class="form-group">
-                        <label class="text-info" asp-for="Name"></label>
-                        <input asp-for="Name" class="form-control control" />
-                    </div>
-                    <div class="form-group">
-                        <label class="text-info" asp-for="SurName"></label>
-                        <input asp-for="SurName" class="form-control control" />
-                    </div>
-                    <div class="form-group">
-                        <label class="text-info" asp-for="Age"></label>
-                        <input asp-for="Age" class="form-control control" />
-                    </div>
-                    <div class="form-group">
-                        <label class="text-info" asp-for="City"></label>
-                        <input asp-for="City" class="form-control control" />
-                    </div>
-                    <div class="form-group">
-                        <label class="text-info" asp-for="About"></label>
-                        <textarea asp-for="About" class="form-control control"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label class="text-info" asp-for="PersonalInfoVisible"></label>
-                        <input asp-for="PersonalInfoVisible" class="form-check-inline" />
-                    </div>
-                    <div class="form-group">
-                        <label class="text-info" asp-for="SelectedFilmsVisible"></label>
-                        <input asp-for="SelectedFilmsVisible" class="form-check-inline" />
-                    </div>
-                    <button type="submit" class="btn border-orange float-right px-5">Сохранить</button>
-                </form>
+                <div class="col-12">
+                    <form class="row" asp-action="ChangeProfileSettings" asp-controller="Manage" method="post">
+
+                        <div class="col-lg-5">
+                            <div class="form-group">
+                                <label class="text-info" asp-for="Email"></label>
+                                <input asp-for="Email" class="form-control control" style="color:#000000" />
+                            </div>
+                            <div class="form-group">
+                                <label class="text-info" asp-for="Name"></label>
+                                <input asp-for="Name" class="form-control control" />
+                            </div>
+                            <div class="form-group">
+                                <label class="text-info" asp-for="SurName"></label>
+                                <input asp-for="SurName" class="form-control control" />
+                            </div>
+                        </div>
+                        <div class="form-group text-center col-lg-5 order-first">
+                            <div class=""><img id="profile-image" class="img-fluid img-thumbnail w-75 d-block mx-auto" style="max-height:250px;" src="@imgPath" /></div>
+                            <input class="text-center mt-1" asp-for="ProfileUploaded" type="file" name="ProfileUploaded" onchange="ChangeImage(this.files);" />
+                        </div>
+                        <div class="form-group col-lg-5">
+                            <label class="text-info" asp-for="PhoneNumber"></label>
+                            <input asp-for="PhoneNumber" class="form-control control" />
+                        </div>
+
+                        <div class="form-group col-lg-5">
+                            <label class="text-info" asp-for="Age"></label>
+                            <input asp-for="Age" class="form-control control" />
+                        </div>
+                        <div class="form-group col-lg-5">
+                            <label class="text-info" asp-for="About"></label>
+                            <textarea asp-for="About" class="form-control control"></textarea>
+                        </div>
+                        <div class="form-group col-lg-5">
+                            <label class="text-info" asp-for="City"></label>
+                            <input asp-for="City" class="form-control control" />
+                        </div>
+                        <div class="form-group col-lg-5 offset-lg-5">
+                            <label class="text-info" asp-for="PersonalInfoVisible"></label>
+                            <input asp-for="PersonalInfoVisible" class="form-check-inline" />
+                        </div>
+                        <div class="form-group col-lg-5 offset-lg-5">
+                            <label class="text-info" asp-for="SelectedFilmsVisible"></label>
+                            <input asp-for="SelectedFilmsVisible" class="form-check-inline" />
+                        </div>
+                        <div class="col-lg-3"><button type="submit" class="btn border-orange w-100">Сохранить</button></div>
+                    </form>
+                </div>
             </div>
         </div>
         <div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
             <div class="row">
                 <h2 class="col-12">Смена пароля</h2>
-                <div class="col-12 col-sm-9 mx-sm-auto col-lg-4">
+                <div class="col-12 col-sm-9 col-lg-5">
                     <form asp-action="ChangePassword" asp-controller="Manage" method="post">
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="form-group">
@@ -189,7 +194,7 @@
                             <input asp-for="ChangePasswordModel.ConfirmPassword" class="form-control control" />
                             <span asp-validation-for="ChangePasswordModel.ConfirmPassword" class="text-danger"></span>
                         </div>
-                        <button type="submit" class="btn border-orange float-right">Обновить пароль</button>
+                        <button type="submit" class="btn border-orange">Обновить пароль</button>
                     </form>
                 </div>
             </div>
