--- a/KINOv2/KINOv2/Views/Home/Film.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Film.cshtml
@@ -136,7 +136,7 @@
     {
         <div class="row">
             <div class="text-center mx-auto">
-                <span> Только авторизованные пользователи могут оставлять комментарии.</span><a asp-area="" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@(Url.RouteUrl(new { controller = "Home", action = "Film", id = film.LINK }))"> Войдите, пожалуйста.</a>
+                <span> Только авторизованные пользователи могут оставлять комментарии.</span><a class="text-orange" asp-area="" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@(Url.RouteUrl(new { controller = "Home", action = "Film", id = film.LINK }))"> Войдите, пожалуйста.</a>
             </div>
         </div>
     }
