--- a/KINOv2/KINOv2/Views/Shared/_Layout.cshtml
+++ b/KINOv2/KINOv2/Views/Shared/_Layout.cshtml
@@ -20,8 +20,15 @@
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-        <link rel="stylesheet" href="~/lib/fonts/font-awesome/css/font-awesome.css">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/lib/fonts/font-awesome/css/font-awesome.css" />
+        <link rel="stylesheet" href="~/lib/MvcGrid/css/mvc-grid.css" />
+        <link rel="stylesheet" href="~/lib/rich-text-editor/css/richtext.min.css" />
+        <link rel="stylesheet" href="~/lib/star-rating/css/jquery.rating.css" />
+        <link rel="stylesheet" href="~/lib/tempusdominus-bootstrap-4/dist/css/tempusdominus-bootstrap-4.css" />
+        <link rel="stylesheet" href="~/lib/footable/css/footable.bootstrap.css" />
+        <link rel="stylesheet" href="~/lib/swiper/dist/css/swiper.min.css" />
     </environment>
 </head>
 <body>
@@ -98,7 +105,7 @@
 
     </environment>
     <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
+        @*<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
                 asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                 asp-fallback-test="window.jQuery"
                 crossorigin="anonymous"
@@ -110,7 +117,23 @@
                 crossorigin="anonymous"
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="~/js/site.min.js" asp-append-version="true"></script>*@
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/popper/dist/umd/popper.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/MvcGrid/js/mvc-grid.js"></script>
+        <script src="~/lib/moment/min/moment.min.js"></script>
+        <script src="~/lib/moment/min/moment-with-locales.min.js"></script>
+        <script src="~/lib/moment-timezone/moment-timezone.js"></script>
+        <script src="~/lib/tempusdominus-bootstrap-4/dist/js/tempusdominus-bootstrap-4.js"></script>
+        <script src="~/lib/footable/js/footable.js"></script>
+        <script src="~/lib/swiper/dist/js/swiper.min.js"></script>
+        <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+        <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.js" asp-append-version="true"></script>
+        <script src="~/lib/rich-text-editor/js/jquery.richtext.js"></script>
+        <script src="~/lib/star-rating/js/jquery.rating.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/slideshow.js" asp-append-version="true"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
