--- a/KINOv2/KINOv2/Views/Content/SessionManage.cshtml
+++ b/KINOv2/KINOv2/Views/Content/SessionManage.cshtml
@@ -33,7 +33,7 @@
             <input asp-for="FilmLINK" type="hidden" />
             <div class="form-group">
                 <label class="text-info" asp-for="FilmLINK"></label>
-                <input asp-for="Film.Name" class="form-control control" disabled />
+                <input asp-for="Film.Name" class="form-control control" disabled style="background-color:rgba(133, 136, 146, 0.6); cursor:not-allowed;" />
             </div>
         }
         <div class="form-group">
