--- a/KINOv2/KINOv2/Views/Home/FilmSessions.cshtml
+++ b/KINOv2/KINOv2/Views/Home/FilmSessions.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="col-12 mb-2">
     @if (ViewData["FilmSessions"] is null)
     {
-        <div class="text-center text-info my-1">Сеансы отсутствуют</div>
+        <div class="text-center text-info my-1 h1 mt-md-5">Сеансы отсутствуют</div>
     }
     else
     {
@@ -9,29 +9,10 @@
         {
             if (pair.Value.Count > 0)
             {
-                <div class="text-center text-info my-1">@pair.Key</div>
+                <div class="text-center text-info my-1 mb-2">@pair.Key</div>
                 <div class="row mb-2 justify-content-center">
                     @foreach (var session in pair.Value)
                     {
-                        <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
-                        <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
-                        <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
-                    }
-                </div>
-
-                <div class="row mb-2 justify-content-center">
-                    @foreach (var session in pair.Value)
-                    {
-                        <a class=" col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
-                        <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
-                        <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
-                    }
-                </div>
-                <div class="row mb-2 justify-content-center">
-                    @foreach (var session in pair.Value)
-                    {
-                        <a class=" col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
-                        <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
                         <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToShortTimeString()</div></a>
                     }
                 </div>
