--- a/KINOv2/KINOv2/wwwroot/css/site.css
+++ b/KINOv2/KINOv2/wwwroot/css/site.css
@@ -144,7 +144,7 @@ textarea {
 }
 
     .nav > li > a:hover {
-        color: #f6a21c !important;
+        color: #f6a21c;
     }
 
 .navbar-brand {
@@ -423,9 +423,17 @@ th.picker-switch:hover{
 .bootstrap-datetimepicker-widget table td.today:before {
     border-bottom-color: #17a2b8 !important;
 }
-.selected {
-    color:#f6a21c !important;
+.nav > li > a.selected {
+    color:#f6a21c;
 }
+
+.nav > li > a.selected:hover {
+    color: white;
+}
+
+    .nav > li > a.border-orange:hover {
+        color: white;
+    }
 /*@media (max-width: 350px) {
     #datetimepicker4 > .form-control {
         min-width: initial;
@@ -443,7 +451,6 @@ input[type="text"] {
     border-radius: 50%;
     text-align: center;
     padding-top: 7px;
-    padding-left: 1px;
     position: relative;
     line-height: 15px;
 }
@@ -602,6 +609,11 @@ input[type="text"] {
                 color:#f6a21c !important;                
             }
 
+
+    .session-nav {
+        width:100%;
+    }
+
 }
 
 @media (max-width: 767px) {
@@ -639,4 +651,20 @@ input[type="text"] {
 
 .page-link {
     background-color: transparent;
+}
+
+.img-fixed {
+    width: 100%;    
+}
+
+@media (min-width: 576px) {
+    h1 {
+        font-size:2.5rem;
+    }
+}
+
+@media(max-width: 575px) {
+    h1 {
+        font-size: 2rem;
+    }
 }
